2/28/2025 bis
	Added support for comparators (LE, GE, NE) in hanging count and sum clues, and conditional sum lines and conditional count lines.
	Added new selection criteria of property runs, e.g. parity run, entropy run, etc., which allow comparisons against groups 
	of contiguous digits satisfying the associated property. Think "second group of odd digits sums to 18" or "last group of low digits has two digits".
	Added new selection criteria of ascending/descending runs, as above.
	Added test cases.

2/28/2025
	Added support for star battle/sudoku hybrid puzzles.

2/26/2025 bis
	Added support for ranked cages, with test cases.
	Added additional test cases.

2/26/2025
	Added support for repeated neighbors constraint, and added test case.
	Added support for slot machine, and added test case.
	Added additional test cases.

2/24/2025 bis
	Added test cases.

2/24/2025
	Eliminated terminateOnFirst argument from conditional lines and hanging clues in favor of a terminateOn argument, which defaults to the value 'First'.
	Any existing code for which terminateOnFirst was not set will continue to work. Any code that explicitly set terminateOnFirst=True can be patched by
	replacing with the string terminateOn='First', while code that implemented terminateOnFirst=False can be updated by replacing this string with
	terminateOn='Any'. Sorry for breaking backward compatibility, but hoping the feature is new enough it is not widely used. Updated test cases appropriately.
	
	Added new termination criteria ParityRepeatReached, for all of parity, entropy, modular, primality.
	Fixed bug in neighbor matching which was incorrectly excluding endpoints in the 'All' neighbors selection.
	Added test cases.

2/19/2025
	Added test case for next to nine sum.
	Added support for selection criteria for neighbors matching on entropy, parity, modular or primality, similar to criteria for having consecutive neighbors.